feat: statistics avg video count & duration
